--- a/styles.css
+++ b/styles.css
@@ -1,80 +1,79 @@
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
 
-        * {
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-        }
+html {
+  font-size: 62.5%;
+}
 
-        html {
-            font-size: 62.5%;
-        }
+body {
+  background: url(./images/viking-ship.jpg) rgb(29, 36, 36);
+  background-size: cover;
+  height: 100vh;
+  width: 100vw;
+  background-repeat: no-repeat;
+  background-position: center;
 
-        body {
-            background: url(./images/viking-ship.jpg) rgb(29, 36, 36);
-            background-size: cover;
-            height: 100vh;
-            width: 100vw;
-            background-repeat: no-repeat;
-            background-position: center;
+  font-family: serif;
+  font-size: 1.8rem;
+  text-transform: uppercase;
 
-            font-family: serif;
-            font-size: 1.6rem;
-            text-transform: uppercase;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
 
-            display: flex;
-            flex-direction: column;
-            justify-content: space-between;
-            align-items: center;
+  transition: all;
+}
 
-            transition: all;
-            
-        }
+.container {
+  margin-top: 15rem;
+  width: 100%;
+  max-width: 800px;
+  height: 400px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: center;
+}
 
-        .container {
-            margin-top: 15rem;
-            width: 100%;
-            max-width: 800px;
-            height: 400px;
-            display: flex;
-            flex-direction: column;
-            justify-content: space-around;
-            align-items: center;
+h1 {
+  margin-top: auto;
+  margin-bottom: 1rem;
+}
 
-        }
+ul {
+  margin: 0 0 auto;
+  list-style-type: none;
+}
 
-        h1 {
-            margin-top: auto;
-            margin-bottom: 1rem;
-        }
+ul li {
+  margin-top: 0.5rem;
+  font-weight: 700;
+  letter-spacing: 1.3px;
+}
 
-        ul {
-            margin: 0 0 auto;
-            list-style-type: none;
-        }
+a:link,
+a:visited {
+  color: inherit;
+  text-decoration: none;
+}
 
-        ul li {
-            margin-top: 0.5rem;
-            font-weight: 700;
-            letter-spacing: 1.3px;
-        }
+a:hover,
+a:active {
+  cursor: pointer;
+  text-decoration: underline;
+  color: #aaa;
+}
 
-        a:link, a:visited {
-            color: inherit;
-            text-decoration: none;
-        }
-
-        a:hover, a:active {
-            cursor: pointer;
-            text-decoration: underline;
-            color: #aaa;
-        }
-
-        p {
-            text-align: center;
-            background-color: #333;
-            opacity: 0.7;
-            color: #fff;
-            display: inline-block;
-            padding: 2rem;
-            width: 100%;
-        }
+p {
+  text-align: center;
+  background-color: #333;
+  opacity: 0.7;
+  color: #fff;
+  display: inline-block;
+  padding: 2rem;
+  width: 100%;
+}
