--- a/styles.css
+++ b/styles.css
@@ -26,14 +26,11 @@ body {
   justify-content: space-between;
   align-items: center;
 
-  transition: all;
+  transition: all 300ms;
 }
 
 .container {
-  margin-top: 15rem;
-  width: 100%;
-  max-width: 800px;
-  height: 400px;
+  margin-top: 20%;
   display: flex;
   flex-direction: column;
   justify-content: space-around;
@@ -41,12 +38,10 @@ body {
 }
 
 h1 {
-  margin-top: auto;
   margin-bottom: 1rem;
 }
 
 ul {
-  margin: 0 0 auto;
   list-style-type: none;
 }
 
