--- a/recipes/page-styles.css
+++ b/recipes/page-styles.css
@@ -60,15 +60,17 @@ h2 {
   width: 80%;
   max-width: 1000px;
   display: flex;
-  flex-wrap: wrap;
-  align-items: center;
-  justify-content: center;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: flex-start;
   gap: 5rem;
 }
 
 img {
   width: 100%;
   height: auto;
+  max-width: 700px;
+  min-width: 250px;
   border: 3px solid rgb(95, 48, 14);
   border-radius: 1rem;
 }
@@ -94,7 +96,13 @@ img {
   margin-bottom: 5rem;
 }
 
-@media only screen and (min-width: 1600px) {
+.recipe, .presentation {
+  flex:1;
+  align-items: center;
+  justify-content: center;
+}
+
+@media only screen and (min-width: 1000px) {
   body {
     width: 100%;
     height: 100vh;
@@ -102,15 +110,7 @@ img {
 
   .container {
     max-width: 90%;
-    align-items: flex-end;
+    flex-direction: row;
     margin-bottom: 3rem;
-  }
-
-  .recipe {
-    flex: 2;
-    margin-bottom: unset;
-  }
-  .presentation {
-    flex: 3;
   }
 }
